removed javadoc superflous parts