@@ -71,7 +71,6 @@ public class CreationTool extends AbstractTool {
    */
   private boolean isToolDoneAfterCreation = true;
 
-  /** Creates a new instance. */
   public CreationTool(String prototypeClassName) {
     this(prototypeClassName, null, null);
   }
@@ -83,7 +82,8 @@ public class CreationTool extends AbstractTool {
   public CreationTool(
       String prototypeClassName, Map<AttributeKey<?>, Object> attributes, String name) {
     try {
-      this.prototype = (Figure) Class.forName(prototypeClassName).newInstance();
+      this.prototype =
+          (Figure) Class.forName(prototypeClassName).getDeclaredConstructor().newInstance();
     } catch (Exception e) {
       InternalError error = new InternalError("Unable to create Figure from " + prototypeClassName);
       error.initCause(e);
